--- a/bouncingballs.html
+++ b/bouncingballs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Elastic Ball Simulation</title>
+  <title>Elastic Ball Simulations</title>
   <style>
     body {
       font-family: Arial, sans-serif;
